# TEP-Laby

./: CMakeLists.txt
Lista1/: ConstValues.h  Table.cpp  Table.h  Zad123.cpp  Zad123.h  main.cpp
Lista1/Zad1/: TableAlloc.cpp  TableAlloc.h
Lista2/: CNumber.cpp  CNumber.h  Main.cpp
Lista3/: EquationTree.cpp  EquationTree.h  Main.cpp  Node.h  Parser.cpp  Parser.h
Lista3/Nodes/: BinominalOperatorNode.cpp  BinominalOperatorNode.h  ConstNode.cpp  ConstNode.h  MonominalOperatorNode.cpp  MonominalOperatorNode.h  Node.cpp  Node.h  VarNode.cpp  VarNode.h
Lista3/Nodes/OperatorNodes/: AddOpNode.cpp  AddOpNode.h  CosOpNode.cpp  CosOpNode.h  DivOpNode.cpp  DivOpNode.h  MinOpNode.cpp  MinOpNode.h  MultOpNode.cpp  MultOpNode.h  SinOpNode.cpp  SinOpNode.h
Lista4/: Result.h  Result.tpp  ResultSerializer.h  ResultSerializer.tpp  main.cpp
Lista4/Tree/: EquationTree.cpp  EquationTree.h  Parser.cpp  Parser.h
Lista4/Tree/Nodes/: BinominalOperatorNode.cpp  MonominalOperatorNode.cpp  Node.h  VarNode.cpp
Lista4/Tree/Nodes/OperatorNodes/: AddOpNode.cpp  CosOpNode.cpp  DivOpNode.cpp  DivOpNode.h  MinOpNode.cpp  MinOpNode.h  MultOpNode.cpp  MultOpNode.h  SinOpNode.h
Lista5/: SmartPointer.h  SmartPointer.tpp  main.cpp
Lista5/Result/: Error.cpp  Error.h  Result.h  ResultSerializer.h
Lista5/Tree/: EquationTree.cpp  EquationTree.h
Lista5/Tree/Nodes/: BinominalOperatorNode.h  ConstNode.cpp  ConstNode.h  MonominalOperatorNode.h  Node.cpp  Node.h  VarNode.h
Lista5/Tree/Nodes/OperatorNodes/: AddOpNode.h  CosOpNode.h  SinOpNode.cpp
