cmake_minimum_required(VERSION 4.0)
project(TEP)

set(CMAKE_CXX_STANDARD 98)

add_executable(TEP
        Lista1/main.cpp
        Lista1/ConstValues.h
        Lista1/Table.cpp
        Lista1/Table.h
        Lista2/Main.cpp
        Lista3/Main.cpp
        Lista3/Node.cpp
        Lista3/Node.h
        Lista3/EquationTree.cpp
        Lista3/EquationTree.h
)
